AUTOMAKE_OPTIONS=foreign
SUBDIRS=src
EXTRA_DIST=LICENSE.TXT README.md \
bin/action-ben.data \
bin/action-kuni.data \
bin/action-mike.data \
bin/action-riki.data \
bin/action-toraji.data \
bin/main.data \
bin/scenes.data \
bin/font.data \
bin/LCUI_D.dll \
bin/LCUI_D.lib \
bin/LCUI.dll \
bin/LCUI_D.pdb \
bin/LCUI.lib \
build/VS2010/game-icon.ico \
build/VS2010/LCUI-2DFightGame.rc \
build/VS2010/LCUI-2DFightGame.sln \
build/VS2010/LCUI-2DFightGame.vcxproj \
build/VS2010/LCUI-2DFightGame.vcxproj.filters \
build/VS2010/LCUI-GameResTool.vcxproj \
build/VS2010/LCUI-GameResTool.vcxproj.filters \
build/VS2010/resource.h \
build/VS2012/game-icon.ico \
build/VS2012/LCUI-2DFightGame.rc \
build/VS2012/LCUI-2DFightGame.sln \
build/VS2012/LCUI-2DFightGame.v11.suo \
build/VS2012/LCUI-2DFightGame.vcxproj \
build/VS2012/LCUI-2DFightGame.vcxproj.filters \
build/VS2012/LCUI-GameResTool.vcxproj \
build/VS2012/LCUI-GameResTool.vcxproj.filters \
build/VS2012/resource.h \
include/LCUI_Build.h \
include/README.md \
include/LCUI/LCUI_Config.h \
include/LCUI/LCUI_Cursor.h \
include/LCUI/LCUI_Display.h \
include/LCUI/LCUI_Draw.h \
include/LCUI/LCUI_Error.h \
include/LCUI/LCUI_Font.h \
include/LCUI/LCUI_Graph.h \
include/LCUI/LCUI_GraphLayer.h \
include/LCUI/LCUI.h \
include/LCUI/LCUI_Input.h \
include/LCUI/LCUI_InputMethod.h \
include/LCUI/LCUI_Memory.h \
include/LCUI/LCUI_Misc.h \
include/LCUI/LCUI_Queue.h \
include/LCUI/LCUI_Resources.h \
include/LCUI/LCUI_StyleLibrary.h \
include/LCUI/LCUI_Thread.h \
include/LCUI/LCUI_Widget.h \
include/LCUI/draw/border.h \
include/LCUI/draw/line.h \
include/LCUI/font/bitmapfont.h \
include/LCUI/font/charset.h \
include/LCUI/font/fontlibrary.h \
include/LCUI/font/textlayer.h \
include/LCUI/font/textstyle.h \
include/LCUI/gui/messagebox.h \
include/LCUI/gui/widget \
include/LCUI/gui/widget_base.h \
include/LCUI/gui/widget_event.h \
include/LCUI/gui/widget_library.h \
include/LCUI/gui/widget_msg.h \
include/LCUI/gui/widget_style.h \
include/LCUI/gui/widget/activebox.h \
include/LCUI/gui/widget/button.h \
include/LCUI/gui/widget/checkbox.h \
include/LCUI/gui/widget/label.h \
include/LCUI/gui/widget/menu.h \
include/LCUI/gui/widget/picturebox.h \
include/LCUI/gui/widget/progressbar.h \
include/LCUI/gui/widget/radiobutton.h \
include/LCUI/gui/widget/scrollbar.h \
include/LCUI/gui/widget/textbox.h \
include/LCUI/gui/widget/window.h \
include/LCUI/kernel/device.h \
include/LCUI/kernel/event.h \
include/LCUI/kernel/main.h \
include/LCUI/kernel/sleeper.h \
include/LCUI/kernel/task.h \
include/LCUI/kernel/timer.h \
include/LCUI/misc/delay.h \
include/LCUI/misc/dirent.h \
include/LCUI/misc/rect.h \
include/LCUI/misc/string.h


