AUTOMAKE_OPTIONS=foreign
noinst_PROGRAMS = game
gamedir = $(top_builddir)/src
game_HEADERS =		\
main_menu.h			\
game.h			\
game_action.h		\
game_AI.h			\
game_attack.h		\
game_battle.h		\
game_config.h		\
game_control.h		\
game_lifebar.h		\
game_menubtn.h		\
game_menu.h			\
game_msg.h			\
game_object.h		\
game_resource.h		\
game_role_select.h	\
game_space.h		\
game_statusbar.h		\
game_value_tip.h		\
gamewnd_about.h		\
gamewnd_joinus.h		\
gamewnd_license.h		\
gamewnd_setkeyboard.h	\
gamewnd_usage.h		\
game_skill.h		\
skills_common.h		\
skills_fighter.h		\
skills_judo_master.h	\
skills_kung_fu.h		\
skills_martial_artist.h	\
skills_tiger.h
 
game_SOURCES =		\
main.c			\
main_menu.c			\
game_action.c		\
game_AI.c			\
game_attack.c		\
game_battle.c		\
game_config.c		\
game_control.c		\
game_lifebar.c		\
game_menubtn.c		\
game_menu.c			\
game_msg.c			\
game_object.c		\
game_resource.c		\
game_space.c		\
game_statusbar.c		\
game_value_tip.c		\
game_role_select.c	\
gameres_ben.c		\
gameres_kunio.c		\
gameres_mike.c		\
gameres_riki.c		\
gameres_toraji.c		\
gamewnd_about.c		\
gamewnd_joinus.c		\
gamewnd_license.c		\
gamewnd_setkeyboard.c	\
gamewnd_usage.c 		\
game_skill.c		\
skills_common.c		\
skills_fighter.c		\
skills_judo_master.c	\
skills_kung_fu.c		\
skills_martial_artist.c	\
skills_tiger.c

